# nomadik-terminal

./: .gitignore  LICENSE  README.md  SUMMARY.md  TRADELOG.md  install.sh  nomadik.sh  pyproject.toml  setup_nomadik.sh
assets/: ascii_logo.txt
nomadik_terminal/: cli.py
scripts/: matrix.sh
